[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/alien.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/swarm.gd" type="Script" id=2]

[node name="swarm" type="Node2D"]
script = ExtResource( 2 )

[node name="RightNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 533.954, 5.94604 )

[node name="alien" parent="." instance=ExtResource( 1 )]

[node name="LeftNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( -535.143, -4.75684 )

[connection signal="screen_exited" from="RightNotifier" to="." method="_on_RightNotifier_screen_exited"]
[connection signal="screen_exited" from="LeftNotifier" to="." method="_on_LeftNotifier_screen_exited"]
